--- a/src/app/public/about/about.component.html
+++ b/src/app/public/about/about.component.html
@@ -1,166 +1,103 @@
 <div class="cardAnimations ">
-    <div class="row py-4" style="margin: 0;">
-        <div class=" ps-4">
-            <h2 class="text-start mt-3 col-lg-12 m-0 modul-headers">
-                About me
+    <div class="row py-1" style="margin: 0;">
+        <div class="ps-4 m-0 row border-gray-400 border-dotted border-b pt-2 pb-3">
+            <h2 class="mt-2 col-lg-12 m-0 text-center modul-headers">
+                Gulchohra Umarli
             </h2>
-            <div class="modul-header-border"> </div>
+            <div class="text-center mt-2 col-lg-12 m-0">
+                <span class="text-sm px-2 border-orange-400 border-r about-header-info"> Baku, Azerbaijan</span>
+                <span class="text-sm px-2 border-orange-400 border-r about-header-info"> (+994) 70 258 44 74</span>
+                <span class="text-sm px-2 about-header-info"> gulchohra.umarli@gmail.com</span>
+            </div>
+            <!-- <div class="modul-header-border mt-1"> </div> -->
         </div>
 
-        <div class="row mt-2 about-con ">
-            <p class="col-lg-8" style="font-size: 15px;">
-                I am a qualified front-end web developer with more than one years of
-                experience in website design and development. I am always open to
-                learning and have the ability to work in a team or individually.
-            </p>
-
-            <div class="col-lg-4 " style="text-align: right;">
-                <div class="d-flex justify-content-end fw-bold ">
-                    <span class="about-span-headers">Age : 21</span>
-                </div>
-                <div class="d-flex justify-content-end fw-bold ">
-                    <span class="about-span-headers">Residance : Azerbaijan</span>
-                </div>
-                <div class=" d-flex justify-content-end fw-bold ">
-                    <span class="about-span-headers">Address : Baku, Azerbaijan</span>
+        <div class="row ps-4 m-0 border-gray-400 border-dotted border-b pt-2 pb-3 text-start">
+            <div class="col-md-12">
+                <div>
+                    <h3 class="mb-1 text-lg font-medium about-headers">Summary</h3>
+                    <p class="text-sm font-normal">
+                        I am a qualified front-end web developer with more than one years of experience in website
+                        design and development. I am always open to learning and have the ability to work in a team or
+                        individually.
+                    </p>
                 </div>
             </div>
         </div>
 
-        <div class="row mt-4 about-con">
-            <div class="col-lg-7 row " style="font-size: 15px; margin: 0;">
-                <h2 class=" col-lg-12">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
-                        class="bi bi-mortarboard-fill" viewBox="0 0 16 16">
-                        <path
-                            d="M8.211 2.047a.5.5 0 0 0-.422 0l-7.5 3.5a.5.5 0 0 0 .025.917l7.5 3a.5.5 0 0 0 .372 0L14 7.14V13a1 1 0 0 0-1 1v2h3v-2a1 1 0 0 0-1-1V6.739l.686-.275a.5.5 0 0 0 .025-.917l-7.5-3.5Z" />
-                        <path
-                            d="M4.176 9.032a.5.5 0 0 0-.656.327l-.5 1.7a.5.5 0 0 0 .294.605l4.5 1.8a.5.5 0 0 0 .372 0l4.5-1.8a.5.5 0 0 0 .294-.605l-.5-1.7a.5.5 0 0 0-.656-.327L8 10.466 4.176 9.032Z" />
-                    </svg> Education
-                </h2>
-                <div class="row " style="margin: 0;">
-                    <!-- <div class="col-lg-4">
-                        <img src="../../../assets/adnsu.png" style="width: 100%;" alt="">
-                    </div> -->
-                    <div class="col-lg-12 p-0">
-                        <p> <span style="font-size: 20px;">•</span> Azerbaijan State Oil and Industrial University -
-                            <small>2019-2023</small>
-                        </p>
-                        <!-- <p><small>Computer Engineering.</small></p> -->
-                    </div>
+        <div class="row ps-4 m-0 border-gray-400 border-dotted border-b pt-2 pb-3 text-start">
+            <div class="col-md-6">
+                <div>
+                    <h3 class="mb-1 text-lg font-medium about-headers">Education</h3>
+                    <p class="text-sm font-normal">
+                        <span class="font-medium">Bachelor of Science, Computer Engineering</span>,
+                        <small>06/2023</small>
+                        <br>
+                        <span class="font-medium">Azerbaijan State Oil And Industry University</span>, <small>Baku,
+                            Azerbaijan</small>
+                    </p>
                 </div>
             </div>
+            <div class="col-md-6">
+                <div>
+                    <h3 class="mb-1 text-lg font-medium about-headers">Languages</h3>
+                    <p class="text-sm mt-2 font-normal ">
+                        <span class="font-medium">Azerbaijan</span>,
+                        <small>Native</small>
 
-            <div class="col-lg-5 row " style="font-size: 15px; margin: 0;">
-                <h2 class=" col-lg-12" style="margin: 0 ;">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
-                        class="bi bi-person-lines-fill" viewBox="0 0 16 16">
-                        <path
-                            d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5zm.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1h-4zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1h-2zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1h-2z" />
-                    </svg>
-                    Internship
-                </h2>
-                <div class="row p-0" style="margin: 0;">
-                    <!-- <div class="col-lg-3" style="text-align: center;">
-                        <img src="../../../assets/alqoritmika.png" style="width:65%;" alt="">
-                    </div> -->
-                    <div class="col-lg-12 p-0 mt-2">
-                        <p class="text-start"><span style="font-size: 20px;">•</span> Algoritmics Azerbaijan </p>
-                    </div>
+                        <span class="ms-3 font-medium">English</span>, 
+                        <small>Intermediate(B1)</small>
+
+                        <span class="ms-3 font-medium">Turkish</span>, 
+                        <small>Advanced(C1)</small>
+                    </p>
                 </div>
+            </div>
+        </div>
 
-                <div class="row p-0" style="margin: 0;">
-                    <!-- <div class="col-lg-3 ps-3">
-                        <img src="../../../assets/logo.svg" style="width: 95%;" alt="">
-                    </div> -->
-                    <div class="col-lg-12 p-0">
-                        <p class="text-start"><span style="font-size: 20px;">•</span> Uniser Group MMC </p>
+        <div class="row ps-4 m-0 border-gray-400 border-dotted border-b pt-2 pb-3 text-start">
+            <div class="col-md-12">
+                <div>
+                    <h3 class="mb-1 text-lg font-medium about-headers">Skills</h3>
+                    <div class="text-sm font-normal">
+                        <ul class="row">
+                            <li *ngFor="let item of skillsList" class="col-sm-4 mb-1">
+                                • {{item.name}}
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="row mt-5 about-con">
-            <div class="col-lg-7 row " style="font-size: 15px; margin: 0;">
-                <h2 class=" col-lg-12" style="margin: 0 ;">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-book-fill" viewBox="0 0 16 16">
-                        <path
-                            d="M8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z" />
-                    </svg>
-                    Cources
-                </h2>
-                <div class="">
-                    <div class="row p-0 mt-3" style="margin: 0;">
-                        <!-- <div class="col-lg-2 text-center">
-                            <img src="../../../assets/alqoritmika.png" style="width:100%;" alt="">
-                        </div> -->
-                        <div class="col-lg-12 p-0 ">
-                            <p class="text-start"> <span style="font-size: 20px;">•</span>Algoritmics Bootcamp</p>
-                        </div>
+        <div class="row ps-4 m-0 border-gray-400 border-dotted border-b text-start pt-2 pb-3">
+            <div class="col-md-12">
+                <h3 class="mb-1 text-lg font-medium about-headers">Experience</h3>
+                <div class="text-sm font-normal ">
+                    <div class="mb-1">
+                        <span class="font-medium">Intern Front-End Web Developer | Algorithmics Azerbaijan</span>,
+                        <small>Feb 2022 - Jun 2022</small>
                     </div>
-
-                    <div class="row p-0 mt-2" style="margin: 0;">
-                        <!-- <div class="col-lg-2 text-center">
-                            <img src="../../../assets/boolean.jpeg" style="width: 100%;" alt="">
-                        </div> -->
-                        <div class="col-lg-12 p-0">
-                            <p class="text-start"><span style="font-size: 20px;">•</span> Boolean Teach </p>
-                        </div>
-                    </div>
+                    <p>
+                        • I learned basics of web developement, how we can work with front-end languages, tools,
+                        libraries
+                        to make more efficient, reliable, safe etc products and so on.
+                        • Developed user interface components and implemented them following well-known React.js
+                        workflows.
+                    </p>
                 </div>
-            </div>
-
-            <div class="col-lg-5 row " style="font-size: 15px; margin: 0;">
-                <h2 class=" col-lg-12" style="margin: 0 ;">
-                    <!-- <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
-                        class="bi bi-flag-fill" viewBox="0 0 16 16">
-                        <path
-                            d="M14.778.085A.5.5 0 0 1 15 .5V8a.5.5 0 0 1-.314.464L14.5 8l.186.464-.003.001-.006.003-.023.009a12.435 12.435 0 0 1-.397.15c-.264.095-.631.223-1.047.35-.816.252-1.879.523-2.71.523-.847 0-1.548-.28-2.158-.525l-.028-.01C7.68 8.71 7.14 8.5 6.5 8.5c-.7 0-1.638.23-2.437.477A19.626 19.626 0 0 0 3 9.342V15.5a.5.5 0 0 1-1 0V.5a.5.5 0 0 1 1 0v.282c.226-.079.496-.17.79-.26C4.606.272 5.67 0 6.5 0c.84 0 1.524.277 2.121.519l.043.018C9.286.788 9.828 1 10.5 1c.7 0 1.638-.23 2.437-.477a19.587 19.587 0 0 0 1.349-.476l.019-.007.004-.002h.001" />
-                    </svg> -->
-                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
-                        class="bi bi-translate" viewBox="0 0 16 16">
-                        <path
-                            d="M4.545 6.714 4.11 8H3l1.862-5h1.284L8 8H6.833l-.435-1.286H4.545zm1.634-.736L5.5 3.956h-.049l-.679 2.022H6.18z" />
-                        <path
-                            d="M0 2a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2v3h3a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-3H2a2 2 0 0 1-2-2V2zm2-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H2zm7.138 9.995c.193.301.402.583.63.846-.748.575-1.673 1.001-2.768 1.292.178.217.451.635.555.867 1.125-.359 2.08-.844 2.886-1.494.777.665 1.739 1.165 2.93 1.472.133-.254.414-.673.629-.89-1.125-.253-2.057-.694-2.82-1.284.681-.747 1.222-1.651 1.621-2.757H14V8h-3v1.047h.765c-.318.844-.74 1.546-1.272 2.13a6.066 6.066 0 0 1-.415-.492 1.988 1.988 0 0 1-.94.31z" />
-                    </svg>
-                    Languages
-                </h2>
-                <div class="">
-                    <div class="row p-0 mt-3" style="margin: 0;">
-                        <!-- <div class="col-lg-2" style="text-align: center;">
-                            <img src="../../../assets/az.svg" style="width:100%;" alt="">
-                        </div> -->
-                        <div class="col-lg-12 p-0">
-                            <p class="text-start"> <span style="font-size: 20px;">•</span> Azerbaijan [Native] </p>
-                        </div>
+                <div class="text-sm font-normal mt-2">
+                    <div class="mb-1">
+                        <span class="font-medium">Front-End Web Developer | "Uniser Group" MMC</span>,
+                        <small>Jun 2022 - Current</small>
                     </div>
-
-                    <div class="row p-0 mt-2" style="margin: 0;">
-                        <!-- <div class="col-lg-2">
-                            <img src="../../../assets/en.png" style="width: 100%;" alt="">
-                        </div> -->
-                        <div class="col-lg-12 p-0 ">
-                            <p class="text-start"> <span style="font-size: 20px;">•</span> English [Intermediate] </p>
-                        </div>
-                    </div>
+                    <p>
+                        • I developed the front-end of new software for many logistics, travel, etc. companies and
+                        supported previous projects working within the team. During this term, I used HTML5, CSS3
+                        (Bootstrap, Tailwind), JavaScript (Angular) and so many npm libraries. And I continue to do so.
+                    </p>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-<ng-template #notificationOverlay>
-    <div class="overlay overlay-notification overlay-fall" cdkMenu>
-        <ul>
-            <li class="notification-head-container" cdkMenuItem>
-
-                <div class="notification-head">Notification</div>
-                <span class="view-all-link">
-                    <a>View All</a>
-                </span>
-            </li>
-        </ul>
-    </div>
-</ng-template>
